--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "uuid": "^10.0.0",
-    "web-streams-polyfill": "^3.0.0"
+    "web-streams-polyfill": "^3.0.0",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
