--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -9,14 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.664.0",
+    "@aws-sdk/client-s3": "^3.121.0",
     "@aws-sdk/s3-request-presigner": "^3.664.0",
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
     "expo-image": "~1.13.0",
@@ -26,14 +28,15 @@
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
-    "web-streams-polyfill": "^3.0.0",
-    "expo-av": "~14.0.7"
+    "web-streams-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
