--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.121.0",
+    "@aws-sdk/s3-presigned-post": "^3.673.0",
     "@aws-sdk/s3-request-presigner": "^3.664.0",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
@@ -24,6 +25,7 @@
     "expo-image": "~1.13.0",
     "expo-intent-launcher": "~11.0.1",
     "expo-media-library": "~16.0.5",
+    "expo-notifications": "~0.28.18",
     "expo-permissions": "^14.4.0",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
