--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
-    "web-streams-polyfill": "^3.0.0"
+    "web-streams-polyfill": "^3.0.0",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
