--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -24,11 +24,14 @@
     "expo-file-system": "~17.0.1",
     "expo-image": "~1.13.0",
     "expo-intent-launcher": "~11.0.1",
+    "expo-localization": "~15.0.3",
     "expo-media-library": "~16.0.5",
     "expo-notifications": "~0.28.18",
     "expo-permissions": "^14.4.0",
     "expo-secure-store": "~13.0.2",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
+    "i18n-js": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -38,8 +41,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
-    "web-streams-polyfill": "^3.0.0",
-    "expo-sharing": "~12.0.1"
+    "web-streams-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
