--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
-    "web-streams-polyfill": "^3.0.0"
+    "web-streams-polyfill": "^3.0.0",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
