--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -14,6 +14,8 @@
     "@aws-sdk/s3-request-presigner": "^3.664.0",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -40,9 +42,9 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
+    "undefined": "react-native-async-storage/async-storage",
     "uuid": "^10.0.0",
-    "web-streams-polyfill": "^3.0.0",
-    "@react-native-picker/picker": "2.7.5"
+    "web-streams-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
