--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -8,13 +8,16 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "engines": {
+    "node": "20.11.1"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.121.0",
     "@aws-sdk/s3-presigned-post": "^3.673.0",
     "@aws-sdk/s3-request-presigner": "^3.664.0",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -29,7 +32,6 @@
     "expo-localization": "~15.0.3",
     "expo-media-library": "~16.0.5",
     "expo-notifications": "~0.28.18",
-    "expo-permissions": "^14.4.0",
     "expo-secure-store": "~13.0.2",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
@@ -37,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
