--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "StatusBar": "^1.0.0",
     "undefined": "react-native-async-storage/async-storage",
     "uuid": "^10.0.0",
     "web-streams-polyfill": "^3.0.0"
