--- a/S3Hub/package.json
+++ b/S3Hub/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-av": "~14.0.7",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
@@ -31,7 +31,7 @@
     "expo-intent-launcher": "~11.0.1",
     "expo-localization": "~15.0.3",
     "expo-media-library": "~16.0.5",
-    "expo-notifications": "~0.28.18",
+    "expo-notifications": "~0.28.19",
     "expo-secure-store": "~13.0.2",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
@@ -51,7 +51,8 @@
     "web-streams-polyfill": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-static-block": "^7.26.0"
   },
   "private": true
 }
