--- a/S3Hub/app.json
+++ b/S3Hub/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "S3Hub",
     "slug": "S3Hub",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -18,7 +18,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.S3Hub.S3Hub"
+      "package": "com.BerruApps.S3Hub"
     },
     "web": {
       "favicon": "./assets/favicon.png"
